<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:id="@+id/scrollview_result"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <FrameLayout
                android:id="@+id/framelayout_map_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible" />

                <RelativeLayout
                    android:layout_width="@dimen/map_pan_buttons_container_dimen"
                    android:layout_height="@dimen/map_pan_buttons_container_dimen"
                    android:layout_margin="@dimen/map_pan_buttons_container_margin"
                    android:background="@drawable/map_pan_buttons_container_background" >

                    <ImageButton
                        android:id="@+id/button_map_pan_up"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:rotation="90"
                        style="@style/MapPanButton" />

                    <ImageButton
                        android:id="@+id/button_map_pan_left"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        style="@style/MapPanButton" />

                    <ImageButton
                        android:id="@+id/button_map_pan_right"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:rotation="180"
                        style="@style/MapPanButton" />

                    <ImageButton
                        android:id="@+id/button_map_pan_down"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:rotation="270"
                        style="@style/MapPanButton" />

                </RelativeLayout>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/linearlayout_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textview_perimeter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:text="@string/perimeter_format" />

                <ListView
                    android:id="@+id/listview_coordinates"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearlayout_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white_transparent_cc"
        android:gravity="center" >

        <TextView
            android:id="@+id/textview_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_map" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible"
        android:alpha="0"
        android:background="@color/white_transparent_cc" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/set_location_accuracy" />

        <SeekBar
            android:id="@+id/seekbar_location_accuracy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textview_location_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/location_accuracy_format" />

    </LinearLayout>

</FrameLayout>
